fix: reduce scrollbar size

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,19 +3,20 @@
 @tailwind utilities;
 
 *::-webkit-scrollbar-track {
-  background-color: silver;
+  background-color: #000;
 }
 
 *::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
+  height: 10px;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: gray;
+  background-color: #444;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: #333333;
+  background-color: #555;
 }
 
 body {
